🎨 fixed css not responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  overflow-x: hidden;
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 6, 78, 59;
   --background-end-rgb: 91, 33, 182;
